Modified layout for new editor design. design still INCOMPLETE!!

--- a/src/components/common/group-selector.html
+++ b/src/components/common/group-selector.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../bower_components/iron-selector/iron-selector.html">
+<link rel="import" href="../../../bower_components/iron-selector/iron-selector.html">
 <dom-module id="group-selector">
     <style>
         .iron-selected {
